[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/pipe-green.png" type="Texture" id=1]
[ext_resource path="res://Obstacle/Obstacle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.3333, 154.667 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.3333, 932 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 40 )

[node name="Obstacle" type="Node2D" groups=["ObstacleGroup"]]
script = ExtResource( 2 )

[node name="LowerWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 200 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerWall"]
position = Vector2( 0, 2.66666 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="LowerWall"]
position = Vector2( -9.53674e-07, 4 )
scale = Vector2( 0.923077, 0.975 )
texture = ExtResource( 1 )

[node name="UpperWall" type="StaticBody2D" parent="."]
position = Vector2( 1.36424e-12, -200 )
rotation = 3.14159
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperWall"]
position = Vector2( 9.85468e-07, 780 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="UpperWall"]
position = Vector2( -9.53674e-07, 4 )
scale = Vector2( 0.923077, 0.975 )
texture = ExtResource( 1 )

[node name="ScoreArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 0, 1.90735e-06 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4.76837e-07, 2.38419e-07 )
scale = Vector2( 2.13333, 4.8 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
